# flake8-encodings

./: .bumpversion.cfg  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.rst  MANIFEST.in  README.rst  __pkginfo__.py  demo.py  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: actions_deploy_conda.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: conda_ci.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
doc-source/: Source.rst  conf.py  contributing.rst  index.rst  license.rst  requirements.txt  usage.rst
doc-source/_templates/sidebar/: navigation.html
flake8_encodings/: __init__.py
tests/: example_source.py  test_plugin.py  test_visitor.py
tests/test_plugin_/: test_plugin.yml  test_plugin_has_jedi_.yml  test_plugin_no_jedi_.yml
tests/test_visitor_/: test_visitor.yml  test_visitor_with_jedi.yml  test_visitor_with_jedi_visit_method.yml
