[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "flake8-encodings"
version = "0.3.1"
description = "A Flake8 plugin to identify incorrect use of encodings."
readme = "README.rst"
keywords = [ "flake8", "encodings", "pep597", "unicode",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/flake8-encodings"
"Issue Tracker" = "https://github.com/domdfcoding/flake8-encodings/issues"
"Source Code" = "https://github.com/domdfcoding/flake8-encodings"
Documentation = "https://flake8-encodings.readthedocs.io/en/latest"

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Flake8",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython", "PyPy",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "flake8_encodings"

[project.entry-points."flake8.extension"]
ENC0 = "flake8_encodings:Plugin"
